[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Enemies/Turret/tankBody_bigRed.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Turret/barrel.png" type="Texture" id=2]
[ext_resource path="res://SFX/SFX_guns/Assault rifle fire.wav" type="AudioStream" id=3]
[ext_resource path="res://Characters/Enemies/Turret.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.194, 22.1794 )

[sub_resource type="Animation" id=2]
resource_name = "hit_animation"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.996078, 0.996078, 0.996078, 1 ), Color( 0.658824, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Turret" type="KinematicBody2D"]
modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
z_index = 11
collision_layer = 4
collision_mask = 31
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.163193, 0.148644 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 11

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ReloadTime" type="Timer" parent="."]
autostart = true

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RotationNode" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="RotationNode"]
position = Vector2( 7.39311, -7.97791 )
texture = ExtResource( 2 )
offset = Vector2( 0.621, 8.382 )

[node name="Position2D" type="Position2D" parent="RotationNode"]
position = Vector2( 24.3788, 8.91905 )

[node name="AudioWeapon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit_animation = SubResource( 2 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
